--- a/scss/pages/_cookbook.scss
+++ b/scss/pages/_cookbook.scss
@@ -76,6 +76,10 @@
   min-width: 0;
 }
 
+.cookbook-book {
+  min-width: 0;
+}
+
 /* ================= BOOKS GRID ================= */
 
 .cookbook-books {
